[package]
name = "api-exec-database"
version = "0.0.1"
edition = "2021"


[dependencies]
actix-web = "4"
dotenv = "0.15.0"
mysql_async = { version = "*", default-features = false, features = ["minimal"]}
serde = "1.0.158"
serde_json = "1.0.94"
serde_derive = "1.0.158"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
csv = "1.2.2"